update lsp with more functions and many more things